# cpp-aachen.github.io

./: README.md  _config.yml  archive.md  cpp-aachen.ics
.github/workflows/: calendar-release.yml  pages.yml
archive/2015-03-12/Ueberladene_Funktionen_einfacher_aufloesen/: Stefans_Static_Caster.hpp
archive/2018-09-13/string_switch/: index.html
archive/2018-09-13/string_switch/css/theme/: black.css
archive/2022-07-13/cpp-summit/: summit.html
archive/2022-07-13/cpp-summit/code/: .clang-format  .gitignore  CMakeLists.txt  addnasm01.asm  addnasm01_main.cpp  align_allocator.h  alignocator.h  bench_normalize.cpp  bench_vec_normalize.cpp  bench_vec_normalize2.cpp  main.cpp  readme.md  simd_aligned_allocator.cpp  simd_alignment.cpp  simd_if.cpp  simd_vectorclass.cpp  simd_vectorclass_loop.cpp  sse_helper.h
archive/2023-03-08/cmath-part1/: cmath.html
archive/2023-10-25/kmscon-Systemkonsole-mit-OpenGL/: README  kmscon-vortrag.txt
archive/2023-11-29/useful_boost_containers/: Useful Boost Containers.key
archive/2024-04-10/how_to_read_template_error_messages/: How_to_read_template_error_messages.key  camomilla.json  sample_stream.cpp
archive/2024-04-10/how_to_read_template_error_messages/additional/: sample_sort.cpp  sample_vector.cpp
archive/2024-10-09/introduction_googletest_googlemock/: GoogleTest_GoogleMock.key
calendar/: cpp-aachen.jsoncal
scripts/: render_next_meetings.py
